# 376HW

01-webcrawler/: CMakeLists.txt  README.md
01-webcrawler/data/: sourdough.txt
01-webcrawler/src/: net.cpp  serial.cpp  threaded.cpp
01-webcrawler/template/src/: net.cpp
02-image-processing/: CMakeLists.txt  README.md
02-image-processing/src/: blur.cpp  blur_perf.py  threshold.cpp  upsample.cpp
03-hillclimb/: README.md
03-hillclimb/src/: climb.cu
